# tirules

./: C_action_cards.php  C_agendas.php  C_events.php  C_exploration_cards.php  C_legendary_planets.php  C_objectives.php  C_promissory_notes.php  C_relics.php  C_technology.php  C_units.php  F_arborec.php  F_argent.php  F_bastion.php  F_creuss.php  F_deepwrought.php  F_empyrean.php  F_firmament.php  F_hacan.php  F_jol_nar.php  F_keleres.php  F_letnev.php  F_lizix.php  F_mahact.php  F_mentak.php  F_muaat.php  F_naalu.php  F_naaz_rokha.php  F_nekro.php  F_nomad.php  F_norr.php  F_ral_nel.php  F_rebellion.php  F_saar.php  F_sol.php  F_ul.php  F_vuilraith.php  F_winnu.php  F_xxcha.php  F_yin.php  F_yssaril.php  (+116 more)
flutter/tirules/: README.md  pubspec.yaml
flutter/tirules/android/app/: build.gradle.kts
flutter/tirules/deploy/web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
flutter/tirules/ios/Runner/: Info.plist
flutter/tirules/ios/Runner.xcodeproj/: project.pbxproj
flutter/tirules/lib/: main.dart
flutter/tirules/linux/: CMakeLists.txt
flutter/tirules/linux/runner/: my_application.cc
flutter/tirules/macos/Runner.xcodeproj/: project.pbxproj
flutter/tirules/web/: index.html  manifest.json
flutter/tirules/windows/: CMakeLists.txt
output/factions/: sardakk_n’orr.yaml
output/rules/: elimination.yaml  mecatol_rex.yaml  producing_units.yaml  strategy_phase.yaml  supernova.yaml  transactions.yaml
php-to-yaml/: README.md  convert.py  pyproject.toml
php-to-yaml/parsing/: card.py  index.py  rules.py
(+143 files in other folders)
